More changes made to project and fixed the feed

--- a/public/services.html
+++ b/public/services.html
@@ -86,12 +86,90 @@
             <p>$55/monthly</p>
             <ul>
                 <li>Benefits from free, gold, and platinum memberships</li>
-                <li>Feature2</li>
-                <li>Feature 3</li>
-                <li>Feature 4</li>
+                <li>Full unlimited access to all features</li>
+                <li>Unlocks full feedback feature</li>
+                <li>Unlocks virtual dating</li>
+                <li>Unlimited access to activity feed!</li>
             </ul>
         </details><br />
         <button type="submit" id="diamond-membershipButton">Diamond Member!</button>"<br /><br />
+
+        <details>
+            <summary>Virtual Dating</summary>
+            <p>Here is a list of virtual games/activities that are currently available...</p>
+            <ul>
+                <li>Virtual Aquarium</li>
+                <li>Virtual UNO, Matching Game, Bingo, & Truth or Dare</li>
+                <li>Vitrual Skiing, Sky Diving, and more!</li>
+                <li>Virtual Hot Air Balloon Rides</li>
+                <li>Virtual Murder Mystery Nights & Virtual Escape Rooms</li>
+                <li>Virtual Casino Nights, Happy Hour & Mixology Classes</li>
+                <li>Virtual Yoga/Workout Challenges</li>
+                <li>Virtual Movie Nights and virtual disco nights</li>
+                <li>Virtual Treasure Hunts, Kareokee Nights, and virtual white water rafting</li>
+                <li>Real experience virtual get aways!</li>
+            </ul>
+        </details><br /><br />
+
+        <details>
+            <summary>Chat Rooms</summary>
+            <p>Below is a list of some of the chat rooms that are currently available...</p>
+            <ul>
+                <li>Age Ranges: 18-25 years old, 26-35 years old, 36-45 yrs old, 45-55 yrs old, and 55+</li>
+                <li>Hookups</li>
+                <li>Country Vibes</li>
+                <li>Career/Professional</li>
+                <li>Outdoor Lovers</li>
+                <li>Pet Lovers</li>
+                <li>Casual Dating</li>
+                <li>B.F.F's</li>
+                <li>Music with chat rooms based on different genre's</li>
+                <li>Breakups</li>
+                <li>A chat room where you can share your past experiences!</li>
+                <li>Date Vibes and many more!</li>
+            </ul>
+        </details>
+
+        <p>Below you'll find important contact details for administrators and more!</p><br /><br />
+
+        <details>
+            <summary>Owner/Founder/Developer</summary>
+            <p>Amy Standridge</p>
+            <ul>
+                <li>
+                    <a href="phone number: 15018036579">
+                        1(501)803-6579
+                    </a>
+                </li>
+                <li>
+                    <a href="phone number: 15013615504">
+                        1(501)361-5504
+                    </a>
+                </li>
+                <li>
+                    <a href="mail to: flirtingsingles@gmail.com">
+                        flirtingsingles@gmail.com
+                    </a>
+                </li>
+                <li>
+                    <a href="mail to: amy.standridge37@gmail.com">
+                        amy.standridge37@gmail.com
+                    </a>
+                </li>
+            </ul>
+        </details><br /><br />
+
+        <details>
+            <summary>Administrator</summary>
+            <p>Tanya Speck</p>
+            <ul>
+                <li>
+                    <a href="phone number: 15013980000">
+                        1(501)398-0000
+                    </a>
+                </li>
+            </ul>
+        </details>
     </main>
 </body>
 </html>
@@ -103,7 +181,19 @@
                 1(501)803-6579</a><br />
                 <a href="mail to: flirtingsingles@gmail.com">
                     flirtingsingles@gmail.com
-                </a><br /><br />
+                </a><br />
+                <a href="https://www.flirtingsingles.blog/home/privacy-policy">
+                    Privacy Policy
+                </a><br />
+                <a href="https://www.flirtingsingles.blog/home/use-policy">
+                    Acceptable Use Policy
+                </a><br />
+                <a href="https://www.flirtingsingles.blog/home/terms-of-use">
+                    Terms of Use
+                </a><br />
+                <a href="https://www.flirtingsingles.blog/home/community-guidleines">
+                    Communtiy Guidelines
+                </a><br />
 
                 <p>&copy; 2025 Flirting Singles</p>
         </address>
