added a more features and changed a few things that needed to be changed

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,128 +1,145 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+	  <meta charset="UTF-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <title>Contact use</title>
+	  <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+	  <details>
+		  <summary>Phone Number</summary>
+		  <p>Our support team is available 24/7 to assist you.</p>
+		  <ul>
+			  <li>
+				  <a href="phone number: 15018036579">
+					  1(501)803-6579</a>
+				  </li>
+				  <li>
+					  <a href="phone number: 15013615504">
+						  1(501)361-5504</a>
+					  </li>
+					  <li>
+						  <a href="phone number: 15017476357">
+							  1(501)7476357</a>
+						  </li>
+						  <li>
+							  <a href="phone number: 15014145627">
+								  1(501)414-5627</a>
+							  </li>
+			  </ul>
+		  <details><br><br>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Contact us</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html" class="button">Activity Feed</a><link />
-                </li>
-                <li>
-                    <a href="public/user-profile.html" class="button">Profile</a>
-                </li>
-                <li>
-                    <a href="public/message-form.html" class="button">Messages</a>
-                </li>
-                <li>
-                    <a href="public/settings-form.html" class="button">Settings</a>
-                </li>
-                <li>
-                    <a href="public/login-form.html" class="button">Login</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <details>
-        <summary>Phone Number</summary>
-        <p>Our support team is available 24/7!</p>
-        <ul>
-            <li>
-                <a href="phone number: 15018036579">
-                    1(501)803-6579
-                </a>
-            </li>
-            <li>
-                <a href="phone number: 15017476357">
-                    1(501)747-6357
-                </a>
-            </li>
-            <li>
-                <a href="phone number: 15013615504">
-                    1(501)361-5504
-                </a>
-            </li>
-            <li>
-                <a href="phone number: 15014145627">
-                    1(501)414-5627
-                </a>
-            </li>
-        </ul>
-    </details><br /><br />
+			  <details>
+				  <summary>Email</summary>
+				  <p>Send us an email or fill out a contact form located at the bottom of the contact information
+					  page.</p>
+					  <ul>
+						  <li>
+							  <a href="mail to: flirtingsingles@gmail.com">
+								  flirtingsingles@gmail.com</a>
+							  </li>
+							  <li>
+								  <a href="mail to: get.connected@flirtingsingle.com">
+									  get.connected@flirtingsingle.com</a>
+								  </li>
+								  <li>
+									  <a href="mail to: info@flirting-singles-community.com">
+										  info@flirting-singles-community.com</a>
+									  </li>
+									  <li>
+										  <a href="mail to: support@flirtingsingle.com">
+											  support@flirtingsingle.com</a>
+										  </li>
+						  </ul>
+				  </details><br><br>
 
-    <details>
-        <summary>Email Address</summary>
-        <p>Email Address</p>
-        <ul>
-            <li>
-                <a href="mail to: flirtingsingles@gmail.com">
-                    flirtingsingles@gmail.com
-                </a>
-            </li>
-            <li>
-                <a href="mail to: info@flirting-singles-communtiy.com">
-                    info@flirting-singles-community.com
-                </a>
-            </li>
-            <li>
-                <a href="mail to: get.connected@flirtingsingle.com">
-                    get.connected@flirtingsingle.com
-                </a>
-            </li>
-            <li>
-                <a href="mail to: support@flirtingsingle.com">
-                    support@flirtingsingle.com
-                </a>
-            </li>
-        </ul>
-    </details><br /><br />
+				  <details>
+					  <summary>Address</summary>
+					  <p>Or write to use...</p>
+					  <ul>
+						 <li>4509 Haywood St.</li>
+						 <li>North Little Rock,</li>
+						 <li>Arkansas, 72117</li>
+						 <li>United States</li>
+						  </ul>
+					  </details><br><br>
 
-    <details>
-       <summary>Address</summary>
-       <p>Or write to us!</p>
-       <ul>
-           <li>4509 Haywood St.</li>
-           <li>North Little Rcok</li>
-           <li>Arkansas, 72117</li>
-           <li>United States</li>
-       </ul>
-    </details><br /><br />
+					  <section class="contact-form">
+						  <h1>Contact Form</h1>
+						  <div class="contact-form">
+							  <h2>Contact Flirting Singles</h2>
+							  <p>Add details here!</p><br><br>
 
-    <details>
-        <summary>Additional Resources</summary>
-        <ul>
-            <li>
-                <a href="http://www.flirtingsingles.blog/home">
-                    Flirting Singles!
-                </a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/groups/flirtingsingles24">
-                    Join us on Facebook!</a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/@flirtingsingles">
-                    @Flirting Singles YouTube
-                </a>
-            </li>
-            <li>
-                <a href="https://flirtingsingles.bettermode.io">
-                    Community!!
-                </a>
-            </li>
-        </ul>
-    </details>
-</body>
-</html>
-<footer>
-    <div class="footer-content">
-        <address>
-            <p>&copy; 2025 Flirting Singles</p>
-        </address>
-    </div>
-</footer>
+							  <form id="contact-form">
+								  <label for="first-name">First Name:</label>
+								  <input type="text" id="firstName" name="firstName" required>
+
+								  <label for="lastName">Last Name:</label>
+								  <input type="text" id="lastName" name="lastName" required>
+
+								  <label for="message">Message:</label>
+								  <textarea id="message" name="message" placeholder="Type your message..." required>
+
+									  <button type="submit" id="submitButton">Submit</button>
+								  </form>
+								  <style>
+									  .contact-form {
+										  display: flex;
+										  flex-direction: column;
+										  max-width: 40px;
+									  }
+									  body {
+										  font-family: sans-serif;
+										  margin: 0;
+										  padding: 0;
+									  }
+									  main {
+										  padding: 20px;
+									  }
+									  label {
+										  margin-top: 10px;
+									  }
+									  input, textarea {
+										  padding: 8px;
+										  margin-bottom: 10px;
+										  border: 1px solid white;
+									  }
+									  .submit-button {
+										  background-color: black;
+										  color: hotpink;
+										  padding: 10px 15px;
+										  margin: 4px 2px;
+										  text-align: center;
+										  text-decoration: none;
+										  border: none;
+										  border-radius: 5px;
+										  display: inline-block;
+										  cursor: pointer;
+										  font-size: 16px;
+									  }
+									  </style>
+						  </div>
+					  </section>
+  </body>
+  </html>
+  <footer>
+	  <div class="footer-content">
+		  <address>
+			  North Little Rock, Arkansas 72117<br>
+			  <a href="mail to: flirtingsingles@gmail.com">
+				  flirtingsingles@gmail.com</a><br>
+				  
+				  <a href="https://www.flirtingsingles.blog/home/privacy-policy">
+					  Privacy Policy</a><br>
+					  <a href="https://www.fliritngsingles.blog/home/use-policy">
+						  Acceptable Use Policy</a><br>
+						  <a href="https://www.flirtingsingles.blog/home/terms-of-use">
+							  Terms of Use</a><br>
+							  <a href="https://www.flritingsingles.blog/home/community-guidelines">
+								  Community Guidelines!</a><br><br>
+
+								  <p>&copy; 2025 Flirting Singles</p>
+			  </address>
+		  </div>
+		  </footer>
